# yousee-epg-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install.ps1  install.sh  publish.yml  pyproject.toml  server.py
.github/workflows/: test.yml
src/yousee_epg/: server.py
tests/: conftest.py  test_helpers.py  test_resources_prompts.py  test_tools.py
