[project]
name = "yousee-epg-mcp"
version = "1.0.0"
description = "MCP-server til YouSee's danske TV-guide"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
yousee-epg = "yousee_epg.server:main"
yousee-epg-http = "yousee_epg.server:main_http"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yousee_epg"]
