[project]
name = "yousee-epg-mcp"
dynamic = ["version"]
description = "MCP-server til YouSee's danske TV-guide — brug Claude eller ChatGPT til at se hvad der kører i TV"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tue Topholm" },
]
keywords = ["mcp", "yousee", "epg", "tv-guide", "claude", "chatgpt", "denmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ttopholm/yousee-epg-mcp"
Repository = "https://github.com/ttopholm/yousee-epg-mcp"
Issues = "https://github.com/ttopholm/yousee-epg-mcp/issues"

[project.scripts]
yousee-epg-mcp = "yousee_epg.server:main"
yousee-epg-mcp-http = "yousee_epg.server:main_http"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/yousee_epg"]
